[#108] feat: 모달 외부 클릭 시 모달 닫기 기능 추가

--- a/src/index.css
+++ b/src/index.css
@@ -42,21 +42,19 @@ body {
 }
 
 .scrollbar-custom::-webkit-scrollbar {
-  height: 20px;
+  height: 8px;
 }
 
 .scrollbar-custom::-webkit-scrollbar-track {
-  width: 12px;
-  background-color: #21211d;
+  background-color: transparent;
 }
 .scrollbar-custom::-webkit-scrollbar-thumb {
-  background: linear-gradient(transparent, #e57573);
-  border-radius: 6px;
-  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 9999px;
 }
 
 .scrollbar-custom::-webkit-scrollbar-thumb:hover {
-  background: linear-gradient(transparent, #df7b79, transparent);
+  background: rgba(255, 255, 255, 0.4);
 }
 
 @layer base {
